Fix IVADO talk title to Generative AI Model for Security

--- a/_talks/2025-03-13-ivado.md
+++ b/_talks/2025-03-13-ivado.md
@@ -1,5 +1,5 @@
 ---
-title: "AI for Security"
+title: "Generative AI Model for Security"
 collection: talks
 type: "Invited Presentation"
 permalink: /talks/2025-03-13-ivado
@@ -8,4 +8,4 @@ date: 2025-03-13
 location: "Montreal, Canada"
 ---
 
-Invited presentation at the IVADO Community of Practice at HEC Montreal. Presented research on AI for security to the IVADO research community.
+Invited presentation at the IVADO Community of Practice at HEC Montreal. Presented research on generative AI models for security to the IVADO research community.
